[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/art/enemy_test.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 161.0

[sub_resource type="RectangleShape2D" id=3]

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 12
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.65625, 0.65625 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionRange" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRange"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetectionRange" to="." method="_on_PlayerDetectionRange_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRange" to="." method="_on_PlayerDetectionRange_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
